bayelvira/BayesNetParse.java
/* Generated By:JavaCC: Do not edit this line. BayesNetParse.java */
import java.util.Vector;
import java.util.Enumeration;
import java.util.Hashtable;
import Node;
import NodeList;
import Potential;
import PotentialTable;
import PotentialTree;
import Relation;
import Link;
import LinkList;
import java.io.*;


public class BayesNetParse implements BayesNetParseConstants {
 String Type;
 String Name;
 String Title;
 String Comment;
 String Author;
 String WhoChanged;
 String WhenChanged;
 String version;
 boolean locked;
 Hashtable NodeDefaultProperties;
 Hashtable RelationDefaultProperties;
 Vector Consistency;
 NodeList Nodes;
 LinkList Links;
 Vector Relations;
 FiniteStates DefaultFinite;
 //ContinuousNode DefaultContinuous;
 //MixedNode DefaultMixed;
 Relation DefaultRelation;
 Link DefaultLink;
 int defaultnodetype;
 boolean statesdecl;





  public static void main(String args[]) throws ParseException
   ,IOException {
    FileInputStream f;

    f = new FileInputStream("ejemplo.elv");

    BayesNetParse parser = new BayesNetParse(f);
    parser.initialize();

    parser.CompilationUnit();



  }

  public void initialize() {
    String DefaultStates[]= {"absent","present"};

   Name =  new String("");
   Title =  new String("");
   Comment =  new String("");
   Author =  new String("");
   WhoChanged =  new String("");
   WhenChanged =  new String("");
   version =  new String("1.0");

   Consistency = new Vector();
    Nodes = new NodeList();
    Links = new LinkList();
    Relations = new Vector();
    DefaultFinite = new FiniteStates("Default",DefaultStates);
    DefaultRelation = new Relation();
    DefaultRelation.setKind("conditional-prob");
    DefaultFinite.setTitle("");
    DefaultFinite.setComment("");
    DefaultLink = new Link(true);

//    parser.DefaultContinuous = new ContinuousNode();
//    parser.DefaultMixed = new MixedNode();
     defaultnodetype=1;
 }

  final public void CompilationUnit() throws ParseException {
    NetworkDeclaration();
    jj_consume_token(53);
    jj_consume_token(0);
  }

  final public void NetworkDeclaration() throws ParseException {
 Token T;
    NetworkClass();
    T = jj_consume_token(WORD);
 Name=(T.toString());
    jj_consume_token(54);
    NetworkContent();
  }

  final public void NetworkClass() throws ParseException {
    if (jj_2_1(4)) {
      jj_consume_token(NETWORK);
               Type="network";
    } else if (jj_2_2(4)) {
      jj_consume_token(BNET);
           Type="bnet";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NetworkContent() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_3(4)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_4(4)) {
        Property();
      } else if (jj_2_5(4)) {
        DefaultDeclaration();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(55);
    }
    label_2:
    while (true) {
      if (jj_2_6(4)) {
        ;
      } else {
        break label_2;
      }
      ElementDeclaration();
    }
  }

  final public void DefaultDeclaration() throws ParseException {
 Node N;
    if (jj_2_7(4)) {
      jj_consume_token(DEFVALUE);
    } else if (jj_2_8(4)) {
      jj_consume_token(EVERY);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_11(4)) {
      jj_consume_token(NODE);
      jj_consume_token(NODETYPE);
      jj_consume_token(EQUAL);
      jj_consume_token(FINITE);
                                          defaultnodetype=1;
    } else if (jj_2_12(4)) {
      jj_consume_token(NODE);
      if (defaultnodetype==1) {

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_9(4)) {
        NodeProperty(DefaultFinite);
      } else if (jj_2_10(4)) {
        FiniteProperty(DefaultFinite);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_13(4)) {
      jj_consume_token(RELATION);
      RelationProperty(DefaultRelation);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Property() throws ParseException {
 Token T;
    if (jj_2_18(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                              Title=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_19(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                Comment=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_20(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_21(4)) {
      jj_consume_token(CONSISTENCY);
      jj_consume_token(EQUAL);
      jj_consume_token(OPEN_PAREN);
      ListWords(Consistency);
      jj_consume_token(CLOSE_PAREN);
    } else if (jj_2_22(4)) {
      jj_consume_token(AUTHOR);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                 Author=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_23(4)) {
      jj_consume_token(WHOCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                     WhoChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_24(4)) {
      jj_consume_token(WHENCHANGED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                      WhenChanged=T.image.substring(1,T.image.length()-1);
    } else if (jj_2_25(4)) {
      jj_consume_token(LOCKED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(BOOLEAN);
         if (T.image.equals("true")){locked=true;}
         else {locked=false;}
    } else if (jj_2_26(4)) {
      jj_consume_token(VERSION);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FLOAT);
                              version = T.image;
    } else if (jj_2_27(4)) {
      jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_14(4)) {
        jj_consume_token(BOOLEAN);
      } else if (jj_2_15(4)) {
        jj_consume_token(WORD);
      } else if (jj_2_16(4)) {
        jj_consume_token(STRING);
      } else if (jj_2_17(4)) {
        jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ElementDeclaration() throws ParseException {
    if (jj_2_28(4)) {
      NodeDeclaration();
    } else if (jj_2_29(4)) {
      LinkDeclaration();
    } else if (jj_2_30(4)) {
      RelationDeclaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NodeDeclaration() throws ParseException {
    FiniteDeclaration();
  }

  final public void FiniteDeclaration() throws ParseException {
 FiniteStates N;
    if (jj_2_31(4)) {
      jj_consume_token(NODE);
      if (defaultnodetype==1) {

      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                           N = (FiniteStates)
DefaultFinite.copy();
      FiniteBody(N);
    } else if (jj_2_32(4)) {
      jj_consume_token(FINITE);
              N= (FiniteStates) DefaultFinite.copy();
      FiniteBody(N);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FiniteBody(FiniteStates N) throws ParseException {
 Token T;
    if (jj_2_33(4)) {
      T = jj_consume_token(WORD);
                N.setName(T.image);
    } else if (jj_2_34(4)) {
      T = jj_consume_token(PARAMETER_WORD);
                         N.setName(T.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_35(4)) {
      jj_consume_token(54);
      FiniteNodeProperties(N);
      jj_consume_token(53);
    } else if (jj_2_36(4)) {
      jj_consume_token(55);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                              Nodes.insertNode(N);
  }

  final public void FiniteNodeProperties(Node N) throws ParseException {
    label_3:
    while (true) {
      if (jj_2_37(4)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_38(4)) {
        NodeProperty(N);
      } else if (jj_2_39(4)) {
        FiniteProperty(N);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(55);
    }
  }

  final public void NodeProperty(Node N) throws ParseException {
 Token T;
    if (jj_2_46(4)) {
      jj_consume_token(TITLE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                               N.setTitle(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_47(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                N.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_48(4)) {
      jj_consume_token(NODEKIND);
      jj_consume_token(EQUAL);
      T = jj_consume_token(WORD);
                                N.setKindOfNode(T.image);
    } else if (jj_2_49(4)) {
      jj_consume_token(NODETYPE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(FINITE);
                                  N.setTypeOfVariable(T.image);
    } else if (jj_2_50(4)) {
      jj_consume_token(POSX);
      jj_consume_token(EQUAL);
      if (jj_2_40(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_41(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosX( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_51(4)) {
      jj_consume_token(POSY);
      jj_consume_token(EQUAL);
      if (jj_2_42(4)) {
        T = jj_consume_token(INTEGER);
      } else if (jj_2_43(4)) {
        T = jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       N.setPosY( Integer.valueOf(T.image).intValue() );
    } else if (jj_2_52(4)) {
      jj_consume_token(WORD);
      jj_consume_token(EQUAL);
      if (jj_2_44(4)) {
        jj_consume_token(STRING);
      } else if (jj_2_45(4)) {
        jj_consume_token(DECIMAL_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FiniteProperty(Node N) throws ParseException {
 Vector V;
 FiniteStates M;
  M = (FiniteStates) N;
    jj_consume_token(STATES);
    jj_consume_token(EQUAL);
                     V= new Vector();
    jj_consume_token(OPEN_PAREN);
    ListWords(V);
    jj_consume_token(CLOSE_PAREN);
       M.setStates(V);
  }

  final public void LinkDeclaration() throws ParseException {
 Token T; Link K; Node P;
    jj_consume_token(LINK);
         K = new Link(true);
    if (jj_2_53(4)) {
      T = jj_consume_token(WORD);
                K.setTail (Nodes.getNode(T.image));
    } else if (jj_2_54(4)) {
      T = jj_consume_token(PARAMETER_WORD);
                        K.setTail (Nodes.getNode(T.image));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_55(4)) {
      T = jj_consume_token(WORD);
                K.setHead (Nodes.getNode(T.image));
    } else if (jj_2_56(4)) {
      T = jj_consume_token(PARAMETER_WORD);
                        K.setHead (Nodes.getNode(T.image));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_57(4)) {
      jj_consume_token(54);
      LinkProperties(K);
      jj_consume_token(53);
    } else if (jj_2_58(4)) {
      jj_consume_token(55);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  Links.insertLink(K);
  }

  final public void LinkProperties(Link K) throws ParseException {
    label_4:
    while (true) {
      if (jj_2_59(4)) {
        ;
      } else {
        break label_4;
      }
      LinkProperty(K);
      jj_consume_token(55);
    }
  }

  final public void LinkProperty(Link K) throws ParseException {
 Token T;
    if (jj_2_60(4)) {
      jj_consume_token(DIRECTED);
      jj_consume_token(EQUAL);
      T = jj_consume_token(BOOLEAN);
       if(T.image.equals("true")) { K.setDirected(true);}
       else {K.setDirected(false);}
    } else if (jj_2_61(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                                K.setComment(T.image.substring(1,T.image.length()-1));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void RelationDeclaration() throws ParseException {
 Token T;
 Vector C;
 Relation R;
    jj_consume_token(RELATION);
              R = new Relation(); C = new Vector();
    ListWords(C);
                R.setVariablesFromNames(C,Nodes);
    if (jj_2_62(4)) {
      jj_consume_token(55);
    } else if (jj_2_63(4)) {
      jj_consume_token(54);
      RelationProperties(R);
      jj_consume_token(53);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                                          Relations.addElement(R);
  }

  final public void RelationProperties(Relation R) throws ParseException {
    label_5:
    while (true) {
      if (jj_2_64(4)) {
        ;
      } else {
        break label_5;
      }
      RelationProperty(R);
      jj_consume_token(55);
    }
  }

  final public void RelationProperty(Relation R) throws ParseException {
 Token T;
 Potential pot;
    if (jj_2_69(4)) {
      jj_consume_token(COMMENT);
      jj_consume_token(EQUAL);
      T = jj_consume_token(STRING);
                              R.setComment(T.image.substring(1,T.image.length()-1));
    } else if (jj_2_70(4)) {
      jj_consume_token(VALUES);
      jj_consume_token(EQUAL);
      if (jj_2_65(4)) {
        pot = TableDeclaration(R);
      } else if (jj_2_66(4)) {
        pot = TreeDeclaration(R);
      } else if (jj_2_67(4)) {
        pot = ConvexSetDeclaration(R);
      } else if (jj_2_68(4)) {
        pot = FunctionDeclaration(R);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                   R.setValues(pot);
    } else if (jj_2_71(4)) {
      jj_consume_token(ACTIVE);
      jj_consume_token(EQUAL);
      T = jj_consume_token(BOOLEAN);
                             if (T.image.equals("false")){R.setActive(false);}
    } else if (jj_2_72(4)) {
      jj_consume_token(RELATIONNAME);
      jj_consume_token(EQUAL);
      T = jj_consume_token(WORD);
                                R.setName(T.image);
    } else if (jj_2_73(4)) {
      jj_consume_token(RELATIONKIND);
      jj_consume_token(EQUAL);
      T = jj_consume_token(WORD);
                                R.setKind(T.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public PotentialFunction FunctionDeclaration(Relation R) throws ParseException {
  Token Q;
  PotentialFunction F;
    jj_consume_token(FUNCTION);
    F = new PotentialFunction(R.getVariables());
    Q = jj_consume_token(WORD);
               F.setFunction(Q.image);
    jj_consume_token(OPEN_PAREN);
    label_6:
    while (true) {
      if (jj_2_74(4)) {
        ;
      } else {
        break label_6;
      }
      ArgumentInclusion(F);
      if (jj_2_75(4)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
    }
    jj_consume_token(CLOSE_PAREN);
    {if (true) return F;}
    throw new Error("Missing return statement in function");
  }

  final public void ArgumentInclusion(PotentialFunction F) throws ParseException {
  Token Q;
  Double D;
    if (jj_2_76(4)) {
      Q = jj_consume_token(FLOAT);
               D=new Double(Q.image); F.addArguments(D.doubleValue());
    } else if (jj_2_77(4)) {
      Q = jj_consume_token(WORD);
              F.addArguments(Q.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public PotentialTable TableDeclaration(Relation R) throws ParseException {
 PotentialTable T;
 int i;
    jj_consume_token(TABLE);
   T = new PotentialTable(R.getVariables()); T.setValue(-1.0);
    jj_consume_token(OPEN_PAREN);
    if (jj_2_78(4)) {
      ListAssignments(T);
    } else {
      ListFloats(T);
    }
    jj_consume_token(CLOSE_PAREN);
  {if (true) return T;}
    throw new Error("Missing return statement in function");
  }

  final public PotentialConvexSet ConvexSetDeclaration(Relation R) throws ParseException {
 PotentialConvexSet CS;
 PotentialTable table;
 Vector C;
    jj_consume_token(CONVEXSET);
     C=new Vector();
    jj_consume_token(OPEN_PAREN);
    label_7:
    while (true) {
      table = TableDeclaration(R);
     C.addElement(table);
      if (jj_2_79(4)) {
        ;
      } else {
        break label_7;
      }
    }
    jj_consume_token(CLOSE_PAREN);
     CS=new PotentialConvexSet(R.getVariables(),C);
     R.setVariables(CS.getVariables());
     {if (true) return CS;}
    throw new Error("Missing return statement in function");
  }
